<resources>
    <string name="app_name">JumpStart</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="or">or</string>
    <string name="googlesignup">Sign in with Google!</string>
    <string name="facebooksignup">Sign in with Facebook!</string>
    <string name="noAcc">Dont have an account?Click here!</string>
    <string name="loginButton">Login</string>

    /*create Account*/

    <string name="fullName">Username</string>
    <string name="email">Email</string>
    <string name="cAPassword">Password</string>
    <string name="cAPasswordConf">Re-Type Password</string>
    <string name="createAccount">Create Account</string>
    <string name="warning">password must be at least 6 letters</string>
    <string name="createButton">Create</string>

    <string name="addPhotoText">Add a photo!</string>
    <string name="addProfile"> </string>

    /*createNewTask*/
    <string name="createNewTask">Create New Task</string>
    <string name="ctTaskName">Task Name</string>
    <string name="ctTaskDescription"> Task Description</string>
    <string name="ctAddTask">Add Task</string>
    <string name="ctShareTask">Cancel</string>
    <string name="start">Start</string>
    <string name="HourTime">12:00</string>

    <string name="End">To</string>


    /*View All Tasks*/
    <string name="AllTasks">All Tasks</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomrrow</string>
    <string name="Upcoming">Upcoming</string>
    <string name="DynamicTask1">Pickup Kids from Soccer</string>
    <string name="DynamicTask2">Daily Yoga</string>
    <string name="DynamicTask3">Review tomorrows forecast</string>
    <string name="DynamicTask4">Upcoming Tasks to set</string>
    <string name="DynamicTask5">Upcoming Tasks to set</string>
    <string name = "Date">Date:</string>

    <string name="UncheckedIcon">""</string>


    /*Edit profile*/

    <string name="EditProfile">Edit Profile</string>
    <string name="Gender">Gender</string>
    <string name="LinkedAccounts">Linked Accounts:</string>
    <string name = "Save">SAVE</string>


    /*Settings*/

    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="Notifications">Notifications</string>
    <string name="InviteFriend">Invite a Friend!</string>
    <string name="preferences">Preferences</string>
    <string name="FirstDay">First Day</string>
    <string name="Language">Language</string>
    <string name="Themes">Themes</string>

    /*View Profile*/

    /*View profile*/

    <string name="pro_fullname">Full Name</string>
    <string name="pro_email">testing@gmail.com</string>
    <string name="pro_totaltask">Total Task</string>
    <string name="pro_activetask">Active Tasks</string>
    <string name="pro_totaltask_counter">0</string>
    <string name="pro_activetask_counter">0</string>
    <string name="lastupdated">Last Updated</string>
    <string name="dateupdated">Oct 25,2020</string>
    <string name="tasktitle">Warrior</string>
    <string name="googleaccount">tesing@gmail.com</string>
    <string name="facebookaccount">John Brown</string>

    <string name = "Location">Location</string>
    <string name ="Humidity">Humidity</string>
    <string name ="Presssure">Pressure</string>
    <string name = "humidvale">4.5</string>
    <string name = "RecyclerViewItems">Recycler Data Here</string>
    <string name = "updatedAt">updated dAt</string>
    <string name = "Calendar">Home</string>
    <string name = "Tasks">Tasks</string>
    /*Google Profile*/

    <string name ="GoogleFullName">Corey Edwards</string>
    <string name ="GoogleEmail">CoreyJ.Edwards24@gmail.com</string>
    <string name ="GoogleId">DatBoiCorey</string>
    <string name = "signout">Sign Out</string>
    <string name = "RandomUser50">RandomUser50</string>
    <string name = "Coreygmail">CoreyJ.Edwards24@gmail.com</string>
</resources>