<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">



    <TextView
        android:id="@+id/settings"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="640dp"
        android:text="@string/Settings"
        android:textColor="#52AAA5"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="76dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="506dp"
        app:srcCompat="@drawable/accounticon"
        android:contentDescription="@string/LinkedAccounts" />

    <TextView
        android:id="@+id/ProfileClicker"
        android:layout_width="76dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="525dp"
        android:text="@string/Profile"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/notificationImage"
        android:layout_width="81dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="414dp"
        app:srcCompat="@drawable/notificationicon" />

    <TextView
        android:id="@+id/Notifications"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="430dp"
        android:text="@string/Notifications" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="66dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="328dp"
        app:srcCompat="@drawable/inviteafriendicon" />

    <TextView
        android:id="@+id/inviteFriend"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="339dp"
        android:text="@string/InviteFriend" />

    <TextView
        android:id="@+id/Preferences"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="279dp"
        android:text="@string/preferences"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/FirstDay"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="242dp"
        android:text="@string/FirstDay" />

    <TextView
        android:id="@+id/Language"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="199dp"
        android:text="@string/Language" />

    <TextView
        android:id="@+id/Themes"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="149dp"
        android:text="@string/Themes" />

    <TextView
        android:id="@+id/themes"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="149dp"
        android:text="@string/Themes" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="48dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="326dp"
        android:layout_marginBottom="58dp"
        app:srcCompat="@drawable/helpicon" />

</RelativeLayout>