<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:contentDescription="@string/addProfile"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/mainscreenblob"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"

        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape"
        android:text="@string/loginButton"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="70dp">

        <ImageView
            android:id="@+id/GoogleIcon"
            android:layout_width="53dp"
            android:layout_height="27dp"
            android:layout_weight="4"
            android:contentDescription="@string/googlesignup"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/googleicon"

            />

        <Button
            android:id="@+id/GoogleSignUp"
            android:layout_width="192dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:text="@string/googlesignup"
            android:textAlignment="center"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <ImageView
        android:id="@+id/FingereprintIcon"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/biofingerprint"


        android:contentDescription="@string/fingerprint_dialog_touch_sensor" />



    <Button
        android:id="@+id/noAccButton"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:background="#FFFFFF"
        android:padding="5dp"
        android:text="@string/noAcc"
        android:textAlignment="center" />


</LinearLayout>