<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accCreationPage">



    <EditText
        android:id="@+id/fullName"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="459dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="400dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="351dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/Gender"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="306dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confPassword"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="200dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/cAPasswordConf"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/editProfile"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="640dp"
        android:text="@string/EditProfile"
        android:textColor="#52AAA5"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="271dp"
        android:text="@string/warning"
        android:textColor="#FF0000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/addProfilePic"
        android:layout_width="177dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="532dp"
        android:contentDescription="@string/addProfile"
        app:srcCompat="@drawable/profileCircle" />


    <TextView
        android:id="@+id/LinkedAccounts"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="124dp"
        android:text="@string/LinkedAccounts"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/fbsignup"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="112dp"
        app:srcCompat="@drawable/fbicon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/googlePic"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="347dp"
        android:layout_marginBottom="78dp"
        app:srcCompat="@drawable/googleicon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/emptyFbArea"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="78dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint=""
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/emptyGoogleArea"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="120dp"
        android:autofillHints="asd"
        android:background="#11000000"
        android:ems="10"
        android:hint=""
        android:inputType="textPassword"
        tools:ignore="LabelFor" />


</RelativeLayout>