<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accCreationPage">


    <ImageView
        android:id="@+id/signupblob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="445dp"
        app:srcCompat="@drawable/signupblob"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="572dp"
        android:text="@string/createAccount"
        android:textColor="#52AAA5"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ProfilePicText"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="369dp"
        android:text="@string/addPhotoText"

        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/shape"

        android:text="@string/createButton" />

    <EditText
        android:id="@+id/cAPasswordConf"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="86dp"
        android:autofillHints="asd"
        android:ems="10"
        android:hint="@string/cAPasswordConf"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/fullnameicon"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="325dp"
        app:srcCompat="@drawable/usernameicon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="320dp"
        android:autofillHints="asd"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="229dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="251dp"
        android:autofillHints="asd"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <ImageView
        android:id="@+id/emailicon"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="258dp"
        app:srcCompat="@drawable/emailicon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/pswdicon"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="191dp"
        app:srcCompat="@drawable/passwordicon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="146dp"
        android:text="@string/warning"
        android:textColor="#FF0000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/retypepswdicon"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="95dp"
        app:srcCompat="@drawable/passwordicon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/cAPassword"
        android:layout_width="228dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="185dp"
        android:autofillHints="asd"
        android:ems="10"
        android:hint="@string/cAPassword"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/addProflePic"
        android:layout_width="190dp"
        android:layout_height="153dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="403dp"
        app:srcCompat="@drawable/addprofileicon"
        tools:ignore="ContentDescription" />


</RelativeLayout>